fix: about page mobile size 1000px section1 gap

--- a/web/css/about.css
+++ b/web/css/about.css
@@ -247,6 +247,16 @@
     }
 }
 
+@media screen and (max-width:1000px) {
+
+    .about-section1 {
+        display: flex;
+        gap: var(--row-img-paragraph-smaller);
+    }
+}
+
+
+
 @media screen and (max-width:900px) {
 
 
